# faire

./: .dmypy.json  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  plugin.json  pyproject.toml
.claude-plugin/: marketplace.json
.claude/commands/: ship.md
.claude/memory/: stop-hook-matcher-removal.md
.specify/memory/: constitution.md
.specify/templates/: tasks-template.md
browser-testing/: README.md  plugin.json
cmux/: plugin.json
cmux/hooks/: hooks.json
cmux/scripts/: allowlist-cmux.sh
code-search/: .mcp.json  README.md  plugin.json  pyproject.toml
code-search/scripts/: validate_plugin.py
code-search/src/code_search/: __init__.py  __main__.py  chunker.py  describer.py  embedder.py  search.py  server.py  store.py
fifo-pipe-channel/: .mcp.json  package.json  plugin.json  server.ts
inline-experiential-learning/: README.md  plugin.json
inline-experiential-learning/hooks/: hooks.json  stop-learning-agent.md
inline-experiential-learning/prompts/: handle-learning.md
inline-experiential-learning/scripts/: rebuild-memory-index.sh
jack-software/: README.md  plugin.json
jack-software/agents/: skill-updater.md
jack-software/commands/: add-procedure.md  procedure-skill.md  ship-skill.md  update-skill.md
jack-software/evals/: README.md  analyze_stats.py  create_benchmark_graph.py  (+3 more)
logs/: README.md  plugin.json
scripts/: add-component.py  add-procedure.py  bump-version.sh  test-ship-skill.py
skills-forced-eval/: README.md  plugin.json
sprites/: plugin.json
supabase/: README.md  plugin.json
ticket-agent/: README.md  plugin.json
(+107 files in other folders)
