[project]
name = "code-search"
version = "0.1.0"
description = "Semantic code search MCP server for Claude Code"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.25.0",
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-bash>=0.23.0",
    "fastembed>=0.5.0",
    "numpy>=1.26.0",
    "claude-agent-sdk>=0.1.18",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_search"]
